--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dev_dependencies:
   firebase_storage: ^11.0.6
   url_launcher: ^6.1.7
   photo_view: ^0.14.0
+  http: ^0.13.5
+  share_plus: ^6.3.0
+  firebase_auth: ^4.2.1
 
 
 # For information on the generic Dart part of this file, see the
